# KKGLabelMaker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  albertsons_label.py  andersons_label.py  bol_multistop_record.py  bol_multistop_row.py  bol_standard_record.py  bol_standard_row.py  label.py  sams_gci_label.py  sams_label.py  skid_tag.py
app/services/: __init__.py  barcode_service.py  bol_doc_upload_parser.py  bol_file_bundle_service.py  bol_multistop_docx_generator.py  bol_multistop_mapper.py  bol_multistop_parser.py  bol_standard_docx_generator.py  bol_standard_mapper.py  bol_standard_parser.py  docx_generator_skid_tags.py  excel_reader.py  excel_reader_albertsons.py  excel_reader_andersons.py  excel_reader_sams.py  excel_reader_sams_gci.py  excel_reader_skid_tags.py  pdf_generator.py  (+5 more)
tests/: __init__.py  test_barcode_service.py  test_bol_doc_upload_parser.py  test_excel_reader.py  test_excel_reader_albertsons.py  test_formatting.py  test_pdf_generator.py  test_pdf_generator_albertsons.py
tmp_check/: no_recourse_plain_save.docx
tmp_check2/: raw_no_recourse_bol_template.docx  raw_standard_bol_template.docx
tmp_check3/: bisect2_first_only.docx  bisect3_with_fallback.docx  bisect3_without_fallback.docx  bisect_both.docx  bisect_with_suppress.docx  raw_apply_nr.docx  step_0_orig.docx  step_4_suppress.docx  step_5_override.docx  step_6_populate.docx  test_all.docx  test_none.docx  test_populate_only.docx  test_simple.docx
tmp_skid_tags_check/: skid_tags.docx
(+25 files in other folders)
